# hxournalclip-client

./: hxournalclip-client.cabal
exe/: hxournalclip-client.hs
lib/Application/HXournal/NetworkClipboard/Client/: Command.hs  Config.hs  Job.hs  ProgType.hs
lib/Application/Hxournal/NetworkClipboard/Client/: Command.hs  Config.hs  Job.hs  ProgType.hs
